ci-cd-pipeline/gitlab/gitlab-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: 'my-gitlabpostgres-svc'
  name: 'my-gitlabpostgres-svc'
spec:
  ports:
    - name: postregsql
      port: 5432
      protocol: TCP
      targetPort: 5432
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: 'my-gitlabpostgres'
  type: ClusterIP
