ci-cd-pipeline/gitlab/gitlab-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: 'my-gitlabredis-svc'
  name: 'my-gitlabredis-svc'
spec:
  ports:
    - name: 'my-gitlabredis-port'
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: 'my-gitlabredis'
  type: ClusterIP
