ci-cd-pipeline/gitlab/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: 'my-gitlab-svc'
  name: 'my-gitlab-svc'
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: 'my-gitlab'
  type: ClusterIP
