ci-cd-pipeline/gitlab/gitlab-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: 'my-gitlab-route'
  name: 'my-gitlab-route'
spec:
  host: 'my-gitlab-my-project-name.apps.ir-thr-at1.arvan.run'
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  to:
    kind: Service
    name: 'my-gitlab-svc'
    weight: 100
  wildcardPolicy: None
